fix a misaligned Chef box

--- a/source/css/index.css.scss
+++ b/source/css/index.css.scss
@@ -203,7 +203,9 @@ footer {
   .integrations {
     article {
       text-align: center;
-      margin-bottom: 80px;
+      height: 320px;
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 
